# local-agent-platform

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  confirm.rs  main.rs
app/ui/: package-lock.json  package.json  vite.config.ts
app/ui/src/: App.test.tsx  App.tsx  bridge.ts  i18n.ts  styles.css  types.ts
app/ui/src/i18n/locales/: en.json  ru.json
crates/jarvis-llm/: Cargo.toml
crates/jarvis-llm/src/: lib.rs
crates/jarvis-router/: Cargo.toml
crates/jarvis-router/src/: lib.rs
crates/jarvis-skills/: Cargo.toml
crates/jarvis-skills/src/: executor.rs  lib.rs
crates/jarvis-skills/src/files/: convert_images.rs  mod.rs  open_folder.rs  search.rs
crates/jarvis-skills/src/memory/: mod.rs  recall.rs  remember.rs
crates/jarvis-skills/src/system/: info.rs  mod.rs  open_app.rs  processes.rs
crates/jarvis-skills/src/web/: mod.rs  open_url.rs
crates/jarvis-store/: Cargo.toml
crates/jarvis-store/migrations/: 202606110001_initial.sql
crates/jarvis-store/src/: lib.rs
crates/jarvis-types/: Cargo.toml
crates/jarvis-types/src/: lib.rs
docs/: ADR.md  ARCHITECTURE.md  MVP.md  ROADMAP.md  VISION.md
docs/guides/: skill-authoring.md
skills/files/: convert_images.json  open_folder.json  search.json
skills/memory/: recall.json  remember.json
skills/system/: info.json  open_app.json  processes.json
skills/web/: open_url.json
