[package]
name = "jarvis"
version = "0.1.0"
description = "Jarvis desktop host"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
jarvis-llm = { path = "../../crates/jarvis-llm" }
jarvis-router = { path = "../../crates/jarvis-router" }
jarvis-skills = { path = "../../crates/jarvis-skills" }
jarvis-store = { path = "../../crates/jarvis-store" }
jarvis-types = { path = "../../crates/jarvis-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["sync", "time"] }
