[package]
name = "jarvis-skills"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
image = "0.25"
jarvis-types = { path = "../jarvis-types" }
serde_json = "1"
strsim = "0.11"
sysinfo = "0.37"
url = "2"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
